tests/golden/type_errors/module_private_name_deps/lib.cd
let secret = 1;
export let visible = 2;
